bugfix list marker not showing, footer padding fixed, block col gap added

--- a/src/app.css
+++ b/src/app.css
@@ -141,6 +141,7 @@ li::marker {
 .list-bullet {
   list-style-type: disc;
   list-style-position: outside;
+  padding-left: 20px;
 }
 
 
